# ai-stock-forecasting-app

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: forecasts.py  health.py  news.py  stocks.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  forecast_run.py  stock_price.py
backend/app/repositories/: forecast_repository.py  stock_repository.py
backend/app/schemas/: __init__.py  forecast.py  news.py  stock.py
backend/app/services/: alpha_vantage.py  alpha_vantage_news.py  cache_service.py  forecast_calibration.py  forecast_features.py  forecast_service.py  news_service.py  sentiment_features.py  stock_service.py
backend/app/services/forecast_models/: __init__.py  base.py  lightgbm_model.py  ridge.py
backend/app/utils/: __init__.py  validation.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_stock_prices.py  0002_create_forecast_runs.py  0003_forecast_model_comparison.py  0004_forecast_calibration_horizons.py
backend/tests/: conftest.py  test_alpha_vantage.py  test_calibration.py  test_forecasts_api.py  test_health.py  test_news_api.py  test_sentiment_features.py  test_stock_repository.py  test_stocks_api.py
docs/: architecture.md  roadmap.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: stocks.ts
frontend/src/components/: ErrorMessage.tsx  ForecastPanel.tsx  Header.tsx  LoadingState.tsx  StockChart.tsx  StockNews.tsx  StockSearch.tsx  StockTable.tsx  SummaryCards.tsx
frontend/src/styles/: index.css
(+3 files in other folders)
