[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-agent-ops-backend"
version = "0.2.0"
description = "Stock ingestion API with experimental next-day forecasting"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "aiosqlite>=0.20,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "numpy>=2.1,<3",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "redis>=5,<6",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
